--- a/config-server/application-dev8080.properties
+++ b/config-server/application-dev8080.properties
@@ -4,33 +4,25 @@ server.port=8080
 #management.endpoints.web.exposure.include=*
 
 
-#\u662Feureka\u6CE8\u518C\u4E2D\u5FC3\u9996\u9875\u7684Application\u8FD9\u4E00\u680F
 spring.application.name=34-springcloud-service-portal
 
-#\u4E0D\u628A\u8BE5\u670D\u52A1\u6CE8\u518C\u5230\u6CE8\u518C\u4E2D\u5FC3
-#eureka.client.register-with-eureka=false
+
 #\u6BCF\u95F4\u96942s\uFF0C\u5411\u670D\u52A1\u7AEF\u53D1\u9001\u4E00\u6B21\u5FC3\u8DF3\uFF0C\u8BC1\u660E\u81EA\u5DF1\u4F9D\u7136"\u5B58\u6D3B"
 eureka.instance.lease-renewal-interval-in-seconds=2
 #\u544A\u8BC9\u670D\u52A1\u7AEF\uFF0C\u5982\u679C\u621110s\u4E4B\u5185\u6CA1\u6709\u7ED9\u4F60\u53D1\u5FC3\u8DF3\uFF0C\u5C31\u4EE3\u8868\u6211\u6545\u969C\u4E86\uFF0C\u5C06\u6211\u8E22\u51FA\u6389
 eureka.instance.lease-expiration-duration-in-seconds=10
 #\u544A\u8BC9\u670D\u52A1\u7AEF\uFF0C\u670D\u52A1\u5B9E\u4F8B\u4EE5IP\u4F5C\u4E3A\u94FE\u63A5\uFF0C\u800C\u4E0D\u662F\u53D6\u673A\u5668\u540D
 eureka.instance.prefer-ip-address=true
-#\u544A\u8BC9\u670D\u52A1\u7AEF\uFF0C\u670D\u52A1\u5B9E\u4F8B\u7684id\uFF0Cid\u5FC5\u987B\u8981\u552F\u4E00\uFF0C\u662Feureka\u6CE8\u518C\u4E2D\u5FC3\u9996\u9875\u7684Status\u8FD9\u4E00\u680F
+#\u544A\u8BC9\u670D\u52A1\u7AEF\uFF0C\u670D\u52A1\u5B9E\u4F8B\u7684\u540D\u5B57
 eureka.instance.instance-id=34-springcloud-service-portal
 
 
 #eureka\u6CE8\u518C\u4E2D\u5FC3\u7684\u8FDE\u63A5\u5730\u5740
-eureka.client.service-url.defaultZone=http://192.168.10.128:8761/eureka,http://192.168.10.128:8762/eureka,http://192.168.10.128:8763/eureka
+eureka.client.service-url.defaultZone=http://192.168.52.128:8761/eureka,http://192.168.52.128:8762/eureka,http://192.168.52.128:8763/eureka
 
-#ribbon.ReadTimeout=6000
-#ribbon.ConnectTimeout=3000
+ribbon.ReadTimeout=6000
+ribbon.ConnectTimeout=3000
+hystrix.command.default.execution.timeout.enabled=true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 
-#hystrix.command.default.execution.timeout.enabled=true
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
-
-feign.hystrix.enabled=true
-
-
-management.endpoints.web.exposure.include=hystrix.stream
-
-service.id=34-SPRINGCLOUD-SERVICE-GOODS
+management.endpoints.web.exposure.include= hystrix.stream
