--- a/config-server/application-dev8080.properties
+++ b/config-server/application-dev8080.properties
@@ -26,3 +26,5 @@ hystrix.command.default.execution.timeout.enabled=true
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 
 management.endpoints.web.exposure.include= hystrix.stream 
+
+info.address = china.beijing
