--- a/config-server/application-dev8080.properties
+++ b/config-server/application-dev8080.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 #\u6253\u5F00\u6240\u6709\u7684web\u8BBF\u95EE\u7AEF\u70B9
-#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=*
 
 
 spring.application.name=34-springcloud-service-portal
@@ -25,6 +25,6 @@ ribbon.ConnectTimeout=3000
 hystrix.command.default.execution.timeout.enabled=true
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 
-management.endpoints.web.exposure.include= hystrix.stream 
+#management.endpoints.web.exposure.include= hystrix.stream
 
 info.address = china.beijing...888
