--- a/config-server/application-dev8080.properties
+++ b/config-server/application-dev8080.properties
@@ -27,4 +27,4 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 
 #management.endpoints.web.exposure.include= hystrix.stream
 
-info.address = china.beijing...888
+info.address = china.beijing...888...666
