--- a/config-server/application-dev8080.properties
+++ b/config-server/application-dev8080.properties
@@ -28,3 +28,11 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 #management.endpoints.web.exposure.include= hystrix.stream
 
 info.address = china.beijing...888...666
+
+
+#\u914D\u7F6Erabbitmq
+spring.rabbitmq.host=192.168.52.128
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
