--- a/config-server/goods/application-dev9200.properties
+++ b/config-server/goods/application-dev9200.properties
@@ -24,3 +24,11 @@ eureka.instance.instance-id=34-springcloud-service-goods-9200
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #eureka\u6CE8\u518C\u4E2D\u5FC3\u7684\u8FDE\u63A5\u5730\u5740
 eureka.client.service-url.defaultZone=http://192.168.52.128:8761/eureka,http://192.168.52.128:8762/eureka,http://192.168.52.128:8763/eureka
+
+#\u6307\u5B9AZipkin server\u5730\u5740
+spring.zipkin.base-url=http://localhost:9410
+#\u53D1\u9001\u8DDF\u8E2A\u6570\u636E\u5230zipkin\u7684\u7C7B\u578Bweb\uFF08http\uFF09
+spring.zipkin.sender.type=web
+#request\u91C7\u6837\u7684\u6570\u91CF \u9ED8\u8BA4\u662F0.1 \u4E5F\u5373\u662F10%\uFF0C\u5373\u91C7\u683710%\u7684\u8BF7\u6C42\u6570\u636E\uFF1B
+#\u56E0\u4E3A\u5728\u5206\u5E03\u5F0F\u7CFB\u7EDF\u4E2D\uFF0C\u6570\u636E\u91CF\u53EF\u80FD\u4F1A\u975E\u5E38\u5927\uFF0C\u56E0\u6B64\u91C7\u6837\u975E\u5E38\u91CD\u8981\u6211\u4EEC\u793A\u4F8B\u6570\u636E\u5C11\u6700\u597D\u914D\u7F6E\u4E3A1\u5168\u91C7\u6837\uFF0C100%\u7684\u91C7\u96C6\u4F1A\u7A0D\u5FAE\u5F71\u54CD\u4E00\u70B9\u6027\u80FD
+spring.sleuth.sampler.probability=1.0
