--- a/config-server/goods/application-dev9200.properties
+++ b/config-server/goods/application-dev9200.properties
@@ -1,9 +1,9 @@
 server.port=9200
 
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://118.190.38.229:3306/goodsdb?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.52.128:3306/goodsdb?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&useSSL=false
 
 #\u6253\u5F00\u6240\u6709\u7684web\u8BBF\u95EE\u7AEF\u70B9
 management.endpoints.web.exposure.include=*
